prodMetadata/src/objects/Press_Hit__c.object
<CustomObject>
    <fields>
        <fullName>AAR__c</fullName>
        <description>AAR for Press Hit</description>
        <inlineHelpText>AAR for Press Hit</inlineHelpText>
        <label>AAR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ad_Value__c</fullName>
        <label>Ad Value</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Article_Teaser__c</fullName>
        <description>Teaser section that goes in the list of press hits (as opposed to the full text).</description>
        <inlineHelpText>Teaser section that goes in the list of press hits (as opposed to the full text).</inlineHelpText>
        <label>Article Teaser</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Article_Text__c</fullName>
        <label>Article Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_Show__c</fullName>
        <label>Details/Show</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Press_Contact_Notes__c</fullName>
        <label>Press Contact Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Press_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Press Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Press Hits</relationshipLabel>
        <relationshipName>Press_Hits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publish_on_website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show press hit on force.com press site</description>
        <inlineHelpText>Show press hit on force.com press site</inlineHelpText>
        <label>Publish on website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Media_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Media Request</label>
        <referenceTo>Media_Request__c</referenceTo>
        <relationshipLabel>Press Hits</relationshipLabel>
        <relationshipName>Press_Hits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Possible Story</fullName>
                </value>
                <value>
                    <fullName>Story Published</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story_Date__c</fullName>
        <label>Story Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Alternative Therapy</fullName>
                </value>
                <value>
                    <fullName>Clay Hunt SAV Act</fullName>
                </value>
                <value>
                    <fullName>COV</fullName>
                </value>
                <value>
                    <fullName>Discrimination</fullName>
                </value>
                <value>
                    <fullName>DOD</fullName>
                </value>
                <value>
                    <fullName>Employment &amp; Financial Hardship</fullName>
                </value>
                <value>
                    <fullName>Gala</fullName>
                </value>
                <value>
                    <fullName>GI Bill</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Homelessness</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Iraqi Interpreters</fullName>
                </value>
                <value>
                    <fullName>Local Events</fullName>
                </value>
                <value>
                    <fullName>Love</fullName>
                </value>
                <value>
                    <fullName>Member Survey</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Military COLA</fullName>
                </value>
                <value>
                    <fullName>Military Recruitment</fullName>
                </value>
                <value>
                    <fullName>Military Sexual Trauma</fullName>
                </value>
                <value>
                    <fullName>NGIB</fullName>
                </value>
                <value>
                    <fullName>NYC Veterans</fullName>
                </value>
                <value>
                    <fullName>Online Campaigns</fullName>
                </value>
                <value>
                    <fullName>Op-Ed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overextended Military</fullName>
                </value>
                <value>
                    <fullName>Partnerships</fullName>
                </value>
                <value>
                    <fullName>Politics</fullName>
                </value>
                <value>
                    <fullName>PTSD</fullName>
                </value>
                <value>
                    <fullName>Rally</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Impressions__c</fullName>
        <label>Total Impressions</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Press Hit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tier__c</columns>
        <columns>Press_Outlet__c</columns>
        <columns>Details_Show__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Story_Date__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Press_Hits_Last_14_Days</fullName>
        <columns>NAME</columns>
        <columns>Story_Date__c</columns>
        <columns>Press_Outlet__c</columns>
        <columns>Topic__c</columns>
        <columns>Tier__c</columns>
        <columns>Details_Show__c</columns>
        <columns>Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Story_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>Press Hits Last 14 Days</label>
    </listViews>
    <listViews>
        <fullName>Press_Hits_Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>Story_Date__c</columns>
        <columns>Press_Outlet__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Topic__c</columns>
        <columns>Tier__c</columns>
        <columns>Details_Show__c</columns>
        <columns>Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Story_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Press Hits Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Press_Hits_This_Year</fullName>
        <columns>NAME</columns>
        <columns>Story_Date__c</columns>
        <columns>Press_Outlet__c</columns>
        <columns>Topic__c</columns>
        <columns>Tier__c</columns>
        <columns>Press_Contact_Notes__c</columns>
        <columns>Details_Show__c</columns>
        <columns>Link__c</columns>
        <columns>Publish_on_website__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Story_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2011 12:00 AM</value>
        </filters>
        <label>Press Hits This Year</label>
    </listViews>
    <listViews>
        <fullName>Suicide_Press_Hits</fullName>
        <columns>Topic__c</columns>
        <columns>NAME</columns>
        <columns>Press_Outlet__c</columns>
        <columns>Story_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>includes</operation>
            <value>Suicide</value>
        </filters>
        <filters>
            <field>Story_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>Story_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2014 12:00 AM</value>
        </filters>
        <label>Suicide Press Hits</label>
    </listViews>
    <listViews>
        <fullName>The_Wait_we_Carry</fullName>
        <columns>Press_Outlet__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Link__c</columns>
        <columns>Topic__c</columns>
        <columns>Tier__c</columns>
        <columns>Total_Impressions__c</columns>
        <columns>Ad_Value__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>includes</operation>
            <value>The Wait We Carry</value>
        </filters>
        <label>The Wait We Carry</label>
    </listViews>
    <listViews>
        <fullName>Tier_1</fullName>
        <columns>NAME</columns>
        <columns>Press_Outlet__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Topic__c</columns>
        <columns>Story_Date__c</columns>
        <columns>Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>Tier 1</value>
        </filters>
        <label>Tier 1</label>
    </listViews>
    <listViews>
        <fullName>Tier_2</fullName>
        <columns>NAME</columns>
        <columns>Press_Outlet__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Topic__c</columns>
        <columns>Story_Date__c</columns>
        <columns>Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>Tier 2</value>
        </filters>
        <label>Tier 2</label>
    </listViews>
    <listViews>
        <fullName>Tier_3</fullName>
        <columns>NAME</columns>
        <columns>Press_Outlet__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Topic__c</columns>
        <columns>Story_Date__c</columns>
        <columns>Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>Tier 3</value>
        </filters>
        <label>Tier 3</label>
    </listViews>
    <listViews>
        <fullName>Wait_Time</fullName>
        <columns>Press_Outlet__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Link__c</columns>
        <columns>Topic__c</columns>
        <columns>Tier__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>includes</operation>
            <value>The Wait We Carry,Wait for Care &amp; Benefits</value>
        </filters>
        <label>Wait Time</label>
    </listViews>
    <nameField>
        <displayFormat>PH-{00000}</displayFormat>
        <label>Press Hit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Press Hits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>